# ProofCapture_CLI

./: Cargo.toml  README.md  RELEASING.md
.github/workflows/: release.yml
docs/: ACTION_ITEMS.md  CLI_IMPLEMENTATION_PLAN.md  CLI_INTEROPERABILITY_SPEC.md  CLI_VERIFIER_REQUIREMENTS.md  CURRENT_ENHANCEMENTS.md  ISSUES.md
fixtures/: sealed_test.proofaudio  sealed_test.proofcapture  sealed_test_password.txt  test_vectors.json
fixtures/full_bundle/: manifest.json
fixtures/minimal_bundle/: README.txt  manifest.json
src/: crypto.rs  error.rs  lib.rs  main.rs  manifest.rs  sealed.rs  trust.rs  verify.rs
