[package]
name = "proofaudio-cli"
version = "0.2.0"
edition = "2021"
authors = ["Best Day Labs"]
description = "Verify ProofAudio recordings from the command line"
license = "MIT"
repository = "https://github.com/bestdaylabs/proofaudio-cli"
keywords = ["audio", "verification", "cryptography", "forensics"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
# Cryptography
sha2 = "0.10"
p256 = { version = "0.13", features = ["ecdsa"] }
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["hmac"] }
hmac = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# File handling
zip = "0.6"

[dev-dependencies]
tempfile = "3.0"

[[bin]]
name = "proofaudio-cli"
path = "src/main.rs"
